tests/good/syntax/028-pair.clap
val x : { _0 int * _1 int } =  at { _0 int * _1 int } { _0 <- 42, _1 <- 73 }

