tests/bad/typing/017-do-annot-int-intead-of-bool.clap
val x = (do { True } : int )
